  * Renamed write-file-word to write-descr-word, and altered it to use the
    write buffer when writing to sockets.
  * Renamed write-file-quad to write-descr-quad, and altered it to use the
    write buffer when writing to sockets.
  * Replaced read-file-all with read-descr-all
  * Added checks to write-descr-byte / word / quad for range, using 
    REQ_BYTE_ARG, REQ_WORD_ARG and REQ_QUAD_ARG.

- 2/28/2006, Phase Four of the Module System, Phase Three of the Macro System
  * Fixed a bug with parse.c that would cause the parser to loop indefinitely
    on encountering an unmatched ")".
  * Fixed a bug with parse.c that would cause a bogus OS error to be thrown
    if the parser parsed an integer after an OS error had occurred.
  * lib/manifest introduced; constructs a load order based on the imports.
    required to execute a particular program.
  * Added set emulation to lib/fakevm.scm
  * Added dict emulation to lib/run-mzscheme.scm
  * Altered context-syntax to use a dict
  * Altered make-top-context to build a syntax dict from the *mosvm-syntax*
    list.
  * Renamed all .scm files to .ms
  * Wrote mosc rule in Makefile for constructing the mosc compiler
  * Wrote an alternate version of read-module for Scheme
  * Compiler now analyzes imports for exported syntaxes
  * Altered export to recognize syntax.
  * Added the trace macro to lib/trace -- traces within a block context.
  + Added bin/manifest.ms 
  + Altered the .ms -> .mo rule to use the mosc compiler

- 2/18/2006, File Function Renames
  * Added file-len
  * Renamed seek-file to file-seek, skip-file to file-skip, and 
    pos-file to file-pos
  * Renamed open-file to open-file-descr
  * Renamed <atom> to <quark>
  * Added file-input-port?, file-output-port?, string-input-port?, and 
    string-output-port? to lib/core.
  * Fixed typo in filter causing a global, "it", to be bound.
  * Renamed <file> to <file-descr>
  * Fixed typo in dict->string that could crash traceback.
